docs: completely overhaul Java Core, Flask, and Python Design Patterns with 11 expert topics